# git-commenter

./: README.md  pyproject.toml
git_commenter/: cli.py  color.py  data.py  git.py  question.py
git_commenter/data/: data.json
tests/: test_cli.py  test_data.py  test_git_commenter.py  test_question.py
