[tool.poetry]
name = "git-commenter"
version = "0.1.0"
description = "Make your Git commit message colorful"
authors = ["Shunta Komatsu <shuntak217@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
pyinquirer = "^1.0.3"
pyperclip = "^1.8.0"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
isort = "^4.3.21"
mypy = "^0.770"
pytest = "^5.4.2"

[tool.poetry.scripts]
git-commenter = "git_commenter.cli:main"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
